# ofxstatement-intesasp

./: pyproject.toml
.devcontainer/: devcontainer.json
ofxstatement_intesasp/: __init__.py  intesaSP.py
