[project]
name = "ofxstatement-intesasp"
version = "0.2.0"
description = ""
authors = [
    {name = "Di Campli D. Raffaele Jr",email = "dcdrj.pub@gmail.com"},
    {name = "Umberto Paro",email = "umberto.paro@me.com"},
]
license = {text = "GPLv3"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ofxstatement (>=0.9.2,<0.10.0)",
    "openpyxl (>=3.1.5,<4.0.0)"
]

[tool.poetry]
classifiers=[
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.10",
    "Natural Language :: English",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Topic :: Utilities",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[project.entry-points]

[project.entry-points."ofxstatement"]
IntesaSP = "ofxstatement_intesasp:IntesaSanPaoloPlugin"
